--- a/Server/package.json
+++ b/Server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +20,5 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "faye": "^1.2.3",
-    "socket.io": "^1.5.1",
-    "swiftplayground": "^1.0.3"
   }
 }
